--- a/fms/file_management_system/requirements.txt
+++ b/fms/file_management_system/requirements.txt
@@ -1,3 +1,102 @@
-docx2pdf==0.1.7
+asgiref==3.7.2
+aspose-pdf==24.1.0
+asttokens==2.4.1
+Babel==2.9.1
+certifi==2022.9.24
+chardet==4.0.0
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.5
+cycler==0.10.0
+Cython==0.29.17
+decorator==4.4.2
+Deprecated==1.2.14
+dill==0.3.5.1
+distlib==0.3.6
 Django==4.2.9
+django-crispy-forms==2.0
+django-debug-toolbar==4.2.0
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+docx==0.2.4
+docx2pdf==0.1.7
+exceptiongroup==1.2.0
+executing==2.0.1
+ffmpeg==1.4
+filelock==3.12.2
+Flask==2.0.1
+greenlet==1.1.2
+gTTS==2.2.4
+idna==3.4
+imageio==2.22.2
+imageio-ffmpeg==0.4.7
 img2pdf==0.4.1
+ipython==8.18.1
+itsdangerous==2.0.1
+jedi==0.19.1
+Jinja2==3.0.1
+joblib==1.0.0
+kiwisolver==1.3.1
+libretranslatepy==2.1.1
+loguru==0.6.0
+lxml==4.9.1
+MarkupSafe==2.0.1
+matplotlib==3.3.3
+matplotlib-inline==0.1.6
+moviepy==1.0.3
+multiprocess==0.70.13
+numpy==1.23.4
+packaging==23.2
+pandas==1.1.5
+pandasql==0.7.3
+parso==0.8.3
+pathos==0.2.9
+patsy==0.5.1
+pikepdf==8.12.0
+pillow==10.2.0
+platformdirs==3.8.1
+pox==0.3.1
+ppft==1.7.6.5
+proglog==0.1.10
+prompt-toolkit==3.0.43
+property-cached==1.6.4
+psycopg2==2.9.7
+pure-eval==0.2.2
+PyExecJS==1.5.1
+Pygments==2.17.2
+PyJWT==2.8.0
+PyMuPDF==1.23.21
+PyMuPDFb==1.23.9
+pyparsing==2.4.7
+PyPDF2==3.0.1
+python-dateutil==2.8.1
+python-docx==1.1.0
+pytz==2020.4
+pywin32==227
+reportlab==4.0.9
+requests==2.28.1
+scikit-learn==0.24.2
+scipy==1.7.1
+six==1.16.0
+sklearn==0.0
+SpeechRecognition==3.8.1
+SQLAlchemy==1.4.25
+sqlparse==0.4.4
+stack-data==0.6.3
+statsmodels==0.12.2
+termcolor==1.1.0
+threadpoolctl==2.1.0
+tkcalendar==1.6.1
+tqdm==4.64.1
+traitlets==5.14.1
+translate==3.6.1
+translators==5.4.3
+typing_extensions==4.7.1
+tzdata==2023.3
+urllib3==1.26.12
+virtualenv==20.23.1
+virtualenvwrapper-win==1.2.7
+wcwidth==0.2.13
+Werkzeug==2.0.1
+win32-setctime==1.1.0
+wrapt==1.16.0
